syntax = "proto3";

message CreateParams {
    message GroupPP {
        message RoundPP {
            message PlayerPP {
                repeated int32 privatePrices = 1;
            }
            repeated PlayerPP playerPPs = 1;
        }
        repeated RoundPP roundPPs = 1;
    }
    int32 group = 1;
    int32 groupSize = 2;
    int32 round = 3;
    repeated GroupPP groupPPs = 4;
    string nextPhaseKey = 5;
}

message MoveParams {
    repeated int32 preferences = 1;
}

message PushParams {
    int32 roundIndex = 1;
    int32 newRoundTimer = 2;
}

message GameState {
    message Group {
        message Round {
            message MatchResult {
                int32 index = 1;
                int32 price = 2;
            }
            repeated int32 playerStatus = 1;
            repeated MatchResult matchResults = 2;
        }
        int32 roundIndex = 1;
        repeated Round rounds = 2;
        int32 playerNum = 3;
    }
    repeated Group groups = 1;
}

message PlayerState {
    message Round {
        repeated int32 privatePrices = 1;
        repeated int32 preferences = 2;
        int32 submitTime = 3;
    }
    int32 groupIndex = 1;
    int32 positionIndex = 2;
    repeated Round rounds = 3;
}
